--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Teko:wght@700&display=swap");
 *{
     box-sizing: border-box;
     --navcolor : rgb(4, 22, 120);
@@ -41,6 +42,50 @@ nav a{
     height: 50px;
     background-color: black;
 }
+
+
+/* home Page */
+.background{
+    height: 90vh;
+    /* background: red; */
+    background-image: url('https://img.freepik.com/free-photo/blue-sport-sedan-parked-yard_114579-5078.jpg?w=1480&t=st=1688833490~exp=1688834090~hmac=5d9ae4094b923945b5c290cd6376db83607c83dc69b7cc03714400bf788f1aa3');
+    background-size: cover;
+    z-index: -1;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+}
+
+.greetings{
+    position: absolute;
+    font-family: 'Teko', sans-serif;
+    color: white;
+    top: 45%;
+    left: 8%;
+    padding: 10px;
+    z-index: 5;
+}
+.greetings button{
+    font-family: sans-serif;
+}
+
+
+/* home Page end */
+
+/* soon page */
+.soon{
+    height: 500px;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column ;       
+}
+.soon h1{
+    font-size: 200px;
+}
+.soon h1, .soon h3{
+    margin: auto;
+}
+/* soon page End */
+
 
 
 /* Crud Page */
