--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -86,6 +86,26 @@ nav a{
 }
 /* soon page End */
 
+/* Card Start */
+.card-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+/* Card End */
+
+/* learnmore start */
+.learnmore-container{
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.iglink{
+    text-decoration: none;
+}
+/* learnmore end */
 
 
 /* Crud Page */
